Featured video content overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
 }
 
-.nav {
+nav {
     position: fixed;
     top: 0;
     left: 0;
@@ -19,13 +19,13 @@
     z-index: 1000;
 }
 
-.nav img {
+nav img {
     height: 50%;
     align-self: center;
     padding-left: 2rem;
 }
 
-.nav-center{
+nav-center{
     display: flex;
     align-items: center;
     height: 100%;
@@ -51,17 +51,17 @@
     background-color: rgba(0,0,0,0.1);
 }
 
-.nav-right {
+nav-right {
     display: flex;
     gap: 15px;
     padding-right: 1.5rem;
 }
 
-.nav-right a{
+nav-right a{
     align-content: center;
 }
 
-.nav-right > a > i {
+nav-right > a > i {
     width: 25px;
     height: 25px;
     text-align: center;
@@ -74,11 +74,11 @@
     transition: all 0.1s ease-in-out;
 }
 
-.nav-right > a > i:hover {
+nav-right > a > i:hover {
     background-color: rgba(0,0,0,0.1);
 }
 
-.nav-right > .lang > i{
+nav-right > .lang > i{
     border: none;
     font-size: 1.2em;
     padding: 0;
@@ -315,14 +315,15 @@
 }
 
 .featured-video {
+    position: relative;
     margin-top: 2rem;
     display: flex;
     position: relative;
     border-radius: 12px;
     width: 65%;;
-    align-items: stretch;
+    align-items: flex-end;
     overflow: hidden;
-    height: 42rem
+    height: 36rem
 }
 
 .bg-video {
@@ -382,7 +383,7 @@
     width: 30%;
     align-items: stretch;
     overflow: hidden;
-    height: 42rem
+    height: 36rem
 }
 
 .image-card img {
